@@ -25,5 +25,9 @@
 </p>
 
 <p>
+	<strong>Image effects</strong>. You can now apply opacity, grayscale, and sepia effects to the base and extra image used for compositing the OpenGraph image. This gives you an unprecedented level of artistic control over the final image.
+</p>
+
+<p>
 	<strong>ImageMagick: Show ellipses when text is being truncated</strong>. When text overlaid on an OpenGraph image is being truncated, the ellipses are now shown regardless of whether you use the ImageMagick or the GD library.
 </p>
