@@ -224,6 +224,12 @@ COM_SOCIALMAGICK_TEMPLATES_FIELD_PARAM_IMAGE_X_LABEL="Left"
 COM_SOCIALMAGICK_TEMPLATES_FIELD_PARAM_IMAGE_X_DESC="The Extra Image layer will be moved this many pixels towards the right, counting from the left edge of the generated image."
 COM_SOCIALMAGICK_TEMPLATES_FIELD_PARAM_IMAGE_Y_LABEL="Top"
 COM_SOCIALMAGICK_TEMPLATES_FIELD_PARAM_IMAGE_Y_DESC="The Extra Image layer will be moved this many pixels towards the bottom, counting from the top edge of the generated image."
+COM_SOCIALMAGICK_TEMPLATES_FIELD_PARAM_IMAGE_GRAYSCALE_LABEL="Grayscale"
+COM_SOCIALMAGICK_TEMPLATES_FIELD_PARAM_IMAGE_GRAYSCALE_DESC="Apply a grayscale (decolorise) effect on the image. The setting is the effect strength, from 0 (disabled) to 100 (full strength). Intermediate values result in more muted colors. Combine with a semi-transparent color to create visually interesting colorisation effects."
+COM_SOCIALMAGICK_TEMPLATES_FIELD_PARAM_IMAGE_SEPIA_LABEL="Sepia"
+COM_SOCIALMAGICK_TEMPLATES_FIELD_PARAM_IMAGE_SEPIA_DESC="Apply a sepia tone effect on the image. The setting is the effect strength, from 0 (disabled) to 100 (full strength). Intermediate values result in partial sepia, similar to an old newspaper color print."
+COM_SOCIALMAGICK_TEMPLATES_FIELD_PARAM_IMAGE_OPACITY_LABEL="Opacity"
+COM_SOCIALMAGICK_TEMPLATES_FIELD_PARAM_IMAGE_OPACITY_DESC="Change how opaque the image will be when composited to the OpenGraph image. The setting values go from 0 (completely transparent) to 100 (completely opaque). Combine with the grayscale effect to create colorisation / ghost image effects."
 
 COM_SOCIALMAGICK_TEMPLATES_FIELD_PARAM_OVERLAY_TEXT_LABEL="Overlay text"
 COM_SOCIALMAGICK_TEMPLATES_FIELD_PARAM_OVERLAY_TEXT_DESC="Enable to overlay a large caption on the generated image. This is the default. Disable if you are using a base image with transparency and want it combined with a category's / article's image without further text overlayed on the image OR if you want to use a precomposed, static image as a common share image for all pages under a menu item."
