@@ -6,6 +6,7 @@ SocialMagick 3.0.0
 + Correct cascading of the options
 + Image sources with fallbacks
 + Preview template
++ Image effects: opacity, grayscale, sepia.
 + ImageMagick: Show ellipses when text is being truncated
 # [LOW] ImageMagick: The text was vertically anchored in the centre instead of the top
 # [LOW] GD: The ellipses when clipping a long sentence were unreliable
